# Cheetah

./: README.md  feedback.md  feedback2.md  step.md
BackEnd/: .gitignore  database.sql3  jest.config.js  ormconfig.json  package.json
BackEnd/src/: index.ts
Expo/: App.tsx  app.json  package.json
Frontend/: Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  tailwind.config.js  tailwind.config.ts  todo.md
Frontend/src/: App.css  App.js  App.test.js  DemoApp.tsx  index.css  index.js  (+1 more)
Mobile/: App.js  package.json
OldBackEnd/: ormconfig.json  package-lock.json  package.json  readme.md  tsconfig.json
rust/: .env.example  .gitignore  Cargo.toml  Dockerfile  docker-compose.yml
rust/src/: compose.rs  extract.rs  lib.rs  main.rs  tests.rs
rust/src/controllers/: mod.rs
rust/src/controllers/chat_controller/: create.rs  delete_message.rs  get_message.rs  mod.rs  pagination.rs  reply_message.rs
rust/src/controllers/user/: get_user.rs
rust/src/controllers/user_controller/: check.rs  get_user.rs  login.rs  logout.rs  mod.rs  refresh_token.rs  register.rs  tag.rs  users.rs
rust/src/db/: conn.rs  mod.rs  model.rs  schema.rs
rust/src/lib/: mod.rs
rust/src/libs/: avatar.rs  crypto.rs  mod.rs
rust/src/middleware/: auth.rs  logger.rs
rust/src/router/: mod.rs
rust/src/router/v1/: chats.rs  mod.rs  users.rs
rust/src/socket/: handlers.rs  mod.rs
rust/src/socket/handlers/: cancel_writing.rs  chat.rs  join.rs  left.rs  mod.rs  writing.rs
rust/test/: PR.md  step2.md
rust/tests/: auth_middleware_tests.rs  controller_tests.rs  error_handling_tests.rs  main.rs
(+121 files in other folders)
