[package]
name = "rust"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
socketioxide = { version="0.17.2", features = ["extensions", "state"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.46", features = ["full", "macros"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio-stream = "0.1.17"
tokio-util = { version = "0.7", features = ["io"], default-features = false }
tower-http = { version = "0.5.0", features = ["cors"] }
tower = "0.5.2"
