[package]
name = "rust"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
rand = { version = "0.8", features = ["getrandom"] }
socketioxide = { version="0.17.2", features = ["extensions", "state"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.46", features = ["full", "macros"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio-stream = "0.1.17"
tokio-util = { version = "0.7", features = ["io"], default-features = false }
tower-http = { version = "0.5.0", features = ["cors"] }
tower = "0.5.2"
dotenvy = "0.15"
chrono = { version = "0.4.41", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
argon2 = "0.5.3"
base64 = "0.22.1"
hmac = "0.12.1"
sha2 = "0.10.9"
sqlx = { version = "0.8.6", features = ["postgres","runtime-tokio-rustls","chrono","uuid"] }
thiserror = "1.0"
